# o8t

./: ReadMe.md  process_mri.py  pyproject.toml  requirements.txt
src/: data_process.py
