[project]
name = "o8t"
version = "0.1.0"
description = "O8T Medical Imaging Engineer Coding Challenge"
authors = [
    {name = "Amir Ebrahimi",email = "Amir.Ebrahimi66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "nibabel (>=5.3.2,<6.0.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "nilearn (>=0.11.1,<0.12.0)",
    "dipy (>=1.10.0,<2.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
